--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 sources_forked/yankring/doc/tags
 sources_non_forked/ack.vim/.netrwhist
-sources_non_forked/tlib/doc/tags
+dein
 tags
-temp_dirs/undodir*
-temp_dirs/yankring_history_v2.txt
+temp_dirs
